--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,10 +3,10 @@
 
     </head>
     <body>
-        <header style = color: #FF0000 height: 70px width: 100%>
+        <header style="background-color:#FF0000;height: 70px;width: 100%">
             
         </header>
-        <footer>
+        <footer style="align-items:center;background-color:#00FF00;height: 60px;width: 100%;position: absolute;bottom: 0;justify-content: center;display: flex">
             Holberton School
         </footer>
     </body>
